--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
 *{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
     font-family: 'Work Sans', "Helvetica Neue", Helvetica, sans-serif !important;
 }
 .navbar-brand,.nav-link,.btn-outline-success{
@@ -8,10 +11,12 @@ font-weight: 700 !important;
 
 
 }
+
 .btn-outline-success{
 border: 2px solid;
 border-radius: 0;
 }
+
 .navbar-brand{
 padding-left: 10rem !important;
 
@@ -168,3 +173,51 @@ margin-top: 1.25rem;
     small a{
       color: gray;
     }
+
+    .nav-link:hover{
+        color: black !important;
+      }
+      img{
+       height: 70px;
+      }
+      .container-lg{
+       gap: 200px !important;
+     
+      }
+      .buttn:hover{
+       transform: scale(1.1,1.2);
+      }
+      .btn:hover{
+       transform: scale(1.1,1.2) !important;
+       background-color: aliceblue;
+       color:#00AD6A; ;
+      }
+      @media (max-width:1024px) {
+       .container{
+         width: 100%;
+         display: flex;
+         flex-direction: row;
+         flex-wrap: wrap;
+         margin-top: 0;
+         word-wrap: none;
+         gap: 20px;
+       }
+       .card3{
+         margin-top: 70px !important;
+       }
+       .textpart{
+        
+         display: flex;
+         justify-content: center;
+         align-self: center;
+         align-items: center;
+       margin-left: 5px;
+       }
+       .buttn1{
+        height: 150px;
+         
+       }
+     
+      }
+     
+      
